hphp/test/zend/bad/ext/reflection/tests/017.php
<?php
class Foo {
	const test = "ok";
}
$class = new ReflectionClass("Foo");
echo $class;
?>
